# ogre

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  internal.bzl
Components/RTShaderSystem/: BUILD.bazel
OgreMain/: BUILD.bazel
OgreMain/src/: OgreMeshSerializerImpl.cpp
Platform/: BUILD.bazel
Platform/Windows/include/: OgreBuildSettings.h  OgreComponents.h  OgreConfigPaths.h  OgreExports.h  OgreGL3PlusExports.h  OgreOctreePrerequisites.h  OgreParticleFXPrerequisites.h  OgreRTShaderExports.h
RenderSystems/GL/: BUILD.bazel
RenderSystems/GL/src/atifs/src/: ps_1_4.cpp
RenderSystems/GL/src/nvparse/: _vs1.0_lexer.cpp
RenderSystems/GL3Plus/: BUILD.bazel
RenderSystems/GLSupport/: BUILD.bazel
RenderSystems/GLSupport/src/win32/: OgreWin32GLSupport.cpp  OgreWin32Window.cpp
