load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "OgreMain",
    srcs = glob(
        [
            "src/*.h",
            "src/*.cpp",
            "src/zip/*.h",
            "src/zip/*.c",
        ],
        exclude = [
            "src/OgreFileSystemLayerNoOp.cpp",
            "src/OgreDDSCodec.cpp",
            "src/OgrePVRTCCodec.cpp",
            "src/OgreETCCodec.cpp",
            "src/OgreSearchOps.cpp",
        ],
    ) + select({
        "@bazel_tools//src/conditions:windows": glob([
            "src/WIN32/*.cpp",
        ]),
        "//conditions:default": [],
    }),
    includes = [
        "include",
        "src",
        "src/zip",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//Platform",
    ],
)
