load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:internal.bzl", "OGRE_LINKOPTS")

cc_library(
    name = "GL3Plus",
    srcs = glob([
        "src/**/*.h",
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = [
        "include",
        "src",
        "src/GLSL/include",
    ],
    linkopts = OGRE_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//OgreMain",
        "//Platform",
        "//RenderSystems/GLSupport",
    ],
)
